--- a/course-materials/week1.qmd
+++ b/course-materials/week1.qmd
@@ -52,7 +52,7 @@ We'll be coding together quite a bit throughout this course. To stay organized, 
 
 ### C. Download the `.qmd` template
 
-Template `.qmd` files will be provided alongside (most) lecture slides to help keep us organized and on track throughout class. They are available for download directly from GitHub at the link(s) provided in the Lecture Materials table (below). Look for the download button at the top right corner of the file (it looks similar to this, {{< fa download title="a downward pointing arrow atop a hard drive" >}}). Please download all necessary templates and save them to the appropriate `EDS-240-data-viz-examples/weekX` folder before each class. 
+Template `.qmd` files will be provided alongside (most) lecture slides to help keep us organized and on track throughout class. They are available for download directly [from GitHub](https://github.com/EDS-240-Data-Viz/code-along-templates/tree/main){target="_blank"} at the link(s) provided in the Lecture Materials table (below). Look for the download button at the top right corner of the file (it looks similar to this, {{< fa download title="a downward pointing arrow atop a hard drive" >}}). Please download all necessary templates and save them to the appropriate `EDS-240-data-viz-examples/weekX` folder before each class. 
 
 ## {{< fa person-chalkboard title="a person pointing at a chalkboard" >}} Lecture Materials {#lecture-materials}
 
@@ -60,7 +60,7 @@ Template `.qmd` files will be provided alongside (most) lecture slides to help k
 |------------------------------------------------------------------------------------------|--------------------------------------------------------------|---------------------------------------------------|
 | [Lecture 1.1: course logistics & syllabus](lecture-slides/lecture1.1-logistics-slides.qmd){target="_blank"}  | *NA* | *NA* |
 | [Lecture 1.2: data viz intro](lecture-slides/lecture1.2-intro-slides.qmd){target="_blank"}  | *NA* | *NA* |
-| [Lecture 1.3: `{ggplot2}` review](lecture-slides/lecture1.3-ggplot-review-slides.qmd){target="_blank"}  | [1.3 template](https://github.com/EDS-240-Data-Viz/EDS-240-Data-Viz.github.io/blob/main/course-materials/templates/TEMPLATE-lecture1.3-ggplot-review.qmd){target="_blank"} | [1.3 key](keys/KEY-lecture1.3-ggplot-review.qmd){target="_blank"} |
+| [Lecture 1.3: `{ggplot2}` review](lecture-slides/lecture1.3-ggplot-review-slides.qmd){target="_blank"}  | [1.3 template](https://github.com/EDS-240-Data-Viz/code-along-templates/blob/main/week1/TEMPLATE-lecture1.3-ggplot-review.qmd){target="_blank"} | [1.3 key](keys/KEY-lecture1.3-ggplot-review.qmd){target="_blank"} |
 : {.hover .bordered tbl-colwidths="[50,25,25]"}
 
 <br>
