--- a/course-materials/discussion/week2/week2-solution.qmd
+++ b/course-materials/discussion/week2/week2-solution.qmd
@@ -1,13 +1,15 @@
 ---
-editor_options: 
-  chunk_output_type: console
+title: "Week 2 Discussion: Solution"
+subtitle: "Recreating the USDM visualization"
+description: "Tuesday January 14^th^, 2025"
 ---
 
-<!-- recreaating US Drought Monitor plot, as seen on Wikipedia: <https://en.wikipedia.org/wiki/Droughts_in_California> -->
-
 ```{r}
-#| eval: false
+#| eval: true
 #| echo: true
+#| warning: false
+#| message: false
+#| fig-align: "center"
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##                                    setup                                 ----
@@ -26,11 +28,11 @@ drought <- tuesdata$drought
 
 drought_clean <- drought |>
 
-  # select cols of interest & update names as needed ----
+  # select cols of interest & update names for clarity (as needed) ----
   select(date = valid_start, state_abb, drought_lvl, area_pct) |> 
 
   # add year, month & day cols using {lubridate} fxns ----
-  # NOTE: this step isn't necessary for our plot, but I'm including as examples of how to extract different date elements from a object of class Date using {lubridate}~ ----
+  # NOTE: this step isn't necessary for our plot, but I'm including as examples of how to extract different date elements from a object of class Date using {lubridate} ----
   mutate(year = year(date),
          month = month(date, label = TRUE, abbr = TRUE),
          day = day(date)) |>
@@ -39,11 +41,12 @@ drought_clean <- drought |>
   mutate(drought_lvl_long = factor(drought_lvl,
                             levels = c("D4", "D3", "D2", "D1","D0", "None"),
                             labels = c("(D4) Exceptional", "(D3) Extreme",
-                                       "(D2) Severe", "(D1) Moderate", "(D0) Abnormally Dry", 
+                                       "(D2) Severe", "(D1) Moderate", 
+                                       "(D0) Abnormally Dry", 
                                        "No Drought"))) |>
   
   # reorder cols ----
-  select(date, year, month, day, state_abb, drought_lvl, drought_lvl_long, area_pct)
+  relocate(date, year, month, day, state_abb, drought_lvl, drought_lvl_long, area_pct)
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##       create stacked area plot of CA drought conditions through time     ----
@@ -55,47 +58,26 @@ drought_clean |>
   filter(drought_lvl != "None",
          state_abb == "CA") |> 
   
-  # create ggplot ----
+  # initialize ggplot ----
   ggplot(mapping = aes(x = date, y = area_pct, fill = drought_lvl_long)) +
   
   # reverse order of groups so level D4 is closest to x-axis ----
   geom_area(position = position_stack(reverse = TRUE)) +
   
-  # update colors to match US Drought Monitor (colors selected using ColorPick Eyedropper from original USDM data viz) ----
+  # update colors to match US Drought Monitor ----
+ # (colors identified using ColorPick Eyedropper extension on the original USDM data viz) 
   scale_fill_manual(values = c("#853904", "#FF0000", "#FFC100", "#FFD965", "#FFFF00")) +
   
   # set x-axis breaks & remove padding between data and x-axis ----
   scale_x_date(breaks = scales::breaks_pretty(n = 10),
                expand = c(0, 0)) +
 
-  # set y-axis breaks & convert values to percentages & & remove padding between data and y-axis----
+  # set y-axis breaks & remove padding between data and y-axis & convert values to percentages ----
   scale_y_continuous(breaks = seq(0, 100, by = 10),
-                     labels = scales::label_percent(scale = 1),
-                     expand = c(0, 0)) +
+                     expand = c(0, 0),
+                     labels = scales::label_percent(scale = 1)) +
   
   # add title ----
   labs(title = "Drought area in California") 
 
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-##            BONUS: using {geofacet} to plot data for all states           ----
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-# NOTE 2024-01-24: The following code works for Sam, but apparently no one else! I'll keep digging into this and update folks when I have a solution
-
-#......remove HI & AK (no data) and also DC from preset grid.....
-mygrid <- geofacet::us_state_grid1 |>
-  filter(!code %in% c("DC", "HI", "AK"))
-
-#..............................plot..............................
-
-# NOTE: this takes a minute to render!
-
-drought_clean |> 
-  filter(drought_lvl != "None") |> 
-  ggplot(aes(x = date, y = area_pct, fill = drought_lvl_long)) +
-  geom_area(position = position_stack(reverse = TRUE)) +
-  geofacet::facet_geo(~state_abb, grid = mygrid) +
-  scale_fill_manual(values = c("#853904", "#FF0000", "#FFC100", "#FFD965", "#FFFF00"))
 ```
-
-
