started creating week 3 discussion exercise doc & revising associated slides

--- a/course-materials/discussion/week2/week2-USDM-slides.qmd
+++ b/course-materials/discussion/week2/week2-USDM-slides.qmd
@@ -105,7 +105,7 @@ knitr::include_graphics("images/tidytuesday-usdm.png")
 
 <hr>
 
-In our next two discussion sections, we'll be recreating this data visualization produced by U.S. Drought Monitor (you can find on the [*Droughts in California* Wikipedia page](https://en.wikipedia.org/wiki/Droughts_in_California)!):
+We'll be recreating this data visualization produced by U.S. Drought Monitor (you can find on the [*Droughts in California* Wikipedia page](https://en.wikipedia.org/wiki/Droughts_in_California)!):
 
 ```{r}
 #| eval: true
@@ -115,4 +115,4 @@ In our next two discussion sections, we'll be recreating this data visualization
 knitr::include_graphics("images/usdm.png")
 ```
 
-**This week, we'll focus on the data layer, geometric layer, and scales.** Next week, we'll work on tweaking the theme (all non-data elements) to get it to look just like the U.S. Drought Monitor's version.
+**This week, we'll focus on the data layer, geometric layer, and scales.** During week 4 discussion, we'll work on tweaking the theme (all non-data elements) to get it to look just like the U.S. Drought Monitor's version.
