--- a/course-materials/discussion/week3/week3-alt-text-slides.qmd
+++ b/course-materials/discussion/week3/week3-alt-text-slides.qmd
@@ -212,113 +212,149 @@ In addition to the formula presented on the last couple slides, consider the fol
 - **link to the data or source** (not in your alt text, but somewhere in the surrounding text or figure caption)
 :::
 
----
+<!-- --- -->
 
-## {#practice1 data-menu-title="Practice 1"}
+<!-- ## {#practice1 data-menu-title="Practice 1"} -->
 
-[Practice writing alt text:]{.slide-title}
+<!-- [Practice writing alt text:]{.slide-title} -->
 
-<hr>
+<!-- <hr> -->
 
-```{r}
-#| eval: true
-#| echo: false
-#| fig-align: "center"
-#| out-width: "70%"
-knitr::include_graphics("images/verisk-maplecroft-climate-change.png")
-```
+<!-- ```{r} -->
+<!-- #| eval: true -->
+<!-- #| echo: false -->
+<!-- #| fig-align: "center" -->
+<!-- #| out-width: "90%" -->
+<!-- knitr::include_graphics("images/co2-emissions.png") -->
+<!-- ``` -->
 
-::: footer
-Image source: [Verisk Maplecroft](https://www.maplecroft.com/insights/analysis/84-of-worlds-fastest-growing-cities-face-extreme-climate-change-risks/) | To enlarge: **right click on image** > **Open Image in New Tab**
-:::
+<!-- ::: footer -->
+<!-- Data source: [`{palmerpenguins}`](https://allisonhorst.github.io/palmerpenguins/) -->
+<!-- ::: -->
 
-```{r}
-countdown::countdown(
-  minutes = 5,
-  # left = 0, right = 0,
-  # Fanfare when it's over
-  play_sound = TRUE,
-  color_border              = "#FFFFFF",
-  color_text                = "#7aa81e",
-  color_running_background  = "#7aa81e",
-  color_running_text        = "#FFFFFF",
-  color_finished_background = "#ffa07a",
-  color_finished_text       = "#FFFFFF",
-  font_size = "2em",
-  )
-```
+<!-- ```{r} -->
+<!-- countdown::countdown( -->
+<!--   minutes = 5, -->
+<!--   # left = 0, right = 0, -->
+<!--   # Fanfare when it's over -->
+<!--   play_sound = TRUE, -->
+<!--   color_border              = "#FFFFFF", -->
+<!--   color_text                = "#7aa81e", -->
+<!--   color_running_background  = "#7aa81e", -->
+<!--   color_running_text        = "#FFFFFF", -->
+<!--   color_finished_background = "#ffa07a", -->
+<!--   color_finished_text       = "#FFFFFF", -->
+<!--   font_size = "2em", -->
+<!--   ) -->
+<!-- ``` -->
 
----
+<!-- --- -->
 
-## {#practice2 data-menu-title="Practice 2"}
+<!-- ## {#practice2 data-menu-title="Practice 2"} -->
 
-[Practice writing alt text:]{.slide-title}
+<!-- [Practice writing alt text:]{.slide-title} -->
 
-<hr>
+<!-- <hr> -->
 
-```{r}
-#| eval: true
-#| echo: false
-#| fig-align: "center"
-#| out-width: "70%"
-knitr::include_graphics("images/ingeman-etal-2019.png")
-```
+<!-- ```{r} -->
+<!-- #| eval: true -->
+<!-- #| echo: false -->
+<!-- #| fig-align: "center" -->
+<!-- #| out-width: "70%" -->
+<!-- knitr::include_graphics("images/ingeman-etal-2019.png") -->
+<!-- ``` -->
 
-::: footer
-Fig 3A from [Ingeman et al. 2019](https://www.science.org/doi/10.1126/science.aav1004)
-:::
+<!-- ::: footer -->
+<!-- Fig 3A from [Ingeman et al. 2019](https://www.science.org/doi/10.1126/science.aav1004) -->
+<!-- ::: -->
 
-```{r}
-countdown::countdown(
-  minutes = 5,
-  # left = 0, right = 0,
-  # Fanfare when it's over
-  play_sound = TRUE,
-  color_border              = "#FFFFFF",
-  color_text                = "#7aa81e",
-  color_running_background  = "#7aa81e",
-  color_running_text        = "#FFFFFF",
-  color_finished_background = "#ffa07a",
-  color_finished_text       = "#FFFFFF",
-  font_size = "2em",
-  )
-```
+<!-- ```{r} -->
+<!-- countdown::countdown( -->
+<!--   minutes = 5, -->
+<!--   # left = 0, right = 0, -->
+<!--   # Fanfare when it's over -->
+<!--   play_sound = TRUE, -->
+<!--   color_border              = "#FFFFFF", -->
+<!--   color_text                = "#7aa81e", -->
+<!--   color_running_background  = "#7aa81e", -->
+<!--   color_running_text        = "#FFFFFF", -->
+<!--   color_finished_background = "#ffa07a", -->
+<!--   color_finished_text       = "#FFFFFF", -->
+<!--   font_size = "2em", -->
+<!--   ) -->
+<!-- ``` -->
 
----
+<!-- --- -->
 
-## {#practice3 data-menu-title="Practice 3"}
+<!-- ## {#practice3 data-menu-title="Practice 3"} -->
 
-[Practice writing alt text:]{.slide-title}
+<!-- [Practice writing alt text:]{.slide-title} -->
 
-<hr>
+<!-- <hr> -->
 
-```{r}
-#| eval: true
-#| echo: false
-#| fig-align: "center"
-#| out-width: "90%"
-knitr::include_graphics("images/co2-emissions.png")
-```
+<!-- ```{r} -->
+<!-- #| eval: true -->
+<!-- #| echo: false -->
+<!-- #| fig-align: "center" -->
+<!-- #| out-width: "70%" -->
+<!-- knitr::include_graphics("images/verisk-maplecroft-climate-change.png") -->
+<!-- ``` -->
 
-::: footer
-Image source: [Milken Institute School of Public Health](https://onlinepublichealth.gwu.edu/resources/climate-change-emissions-data/) | To enlarge: **right click on image** > **Open Image in New Tab**
-:::
+<!-- ::: footer -->
+<!-- Image source: [Verisk Maplecroft](https://www.maplecroft.com/insights/analysis/84-of-worlds-fastest-growing-cities-face-extreme-climate-change-risks/) | To enlarge: **right click on image** > **Open Image in New Tab** -->
+<!-- ::: -->
 
-```{r}
-countdown::countdown(
-  minutes = 5,
-  # left = 0, right = 0,
-  # Fanfare when it's over
-  play_sound = TRUE,
-  color_border              = "#FFFFFF",
-  color_text                = "#7aa81e",
-  color_running_background  = "#7aa81e",
-  color_running_text        = "#FFFFFF",
-  color_finished_background = "#ffa07a",
-  color_finished_text       = "#FFFFFF",
-  font_size = "2em",
-  )
-```
+<!-- ```{r} -->
+<!-- countdown::countdown( -->
+<!--   minutes = 5, -->
+<!--   # left = 0, right = 0, -->
+<!--   # Fanfare when it's over -->
+<!--   play_sound = TRUE, -->
+<!--   color_border              = "#FFFFFF", -->
+<!--   color_text                = "#7aa81e", -->
+<!--   color_running_background  = "#7aa81e", -->
+<!--   color_running_text        = "#FFFFFF", -->
+<!--   color_finished_background = "#ffa07a", -->
+<!--   color_finished_text       = "#FFFFFF", -->
+<!--   font_size = "2em", -->
+<!--   ) -->
+<!-- ``` -->
+
+<!-- --- -->
+
+<!-- ## {#practice3 data-menu-title="Practice 3"} -->
+
+<!-- [Practice writing alt text:]{.slide-title} -->
+
+<!-- <hr> -->
+
+<!-- ```{r} -->
+<!-- #| eval: true -->
+<!-- #| echo: false -->
+<!-- #| fig-align: "center" -->
+<!-- #| out-width: "90%" -->
+<!-- knitr::include_graphics("images/co2-emissions.png") -->
+<!-- ``` -->
+
+<!-- ::: footer -->
+<!-- Image source: [Milken Institute School of Public Health](https://onlinepublichealth.gwu.edu/resources/climate-change-emissions-data/) | To enlarge: **right click on image** > **Open Image in New Tab** -->
+<!-- ::: -->
+
+<!-- ```{r} -->
+<!-- countdown::countdown( -->
+<!--   minutes = 5, -->
+<!--   # left = 0, right = 0, -->
+<!--   # Fanfare when it's over -->
+<!--   play_sound = TRUE, -->
+<!--   color_border              = "#FFFFFF", -->
+<!--   color_text                = "#7aa81e", -->
+<!--   color_running_background  = "#7aa81e", -->
+<!--   color_running_text        = "#FFFFFF", -->
+<!--   color_finished_background = "#ffa07a", -->
+<!--   color_finished_text       = "#FFFFFF", -->
+<!--   font_size = "2em", -->
+<!--   ) -->
+<!-- ``` -->
 
 ---
 
