--- a/course-materials/lecture-slides/lecture1.1-logistics-slides.qmd
+++ b/course-materials/lecture-slides/lecture1.1-logistics-slides.qmd
@@ -113,14 +113,14 @@ knitr::include_graphics("images/week1/sam.png")
 #| eval: true 
 #| echo: false
 #| fig-align: "center"
-#| out-width: "51%" 
-knitr::include_graphics("images/week1/tbd.png")
+#| out-width: "55%" 
+knitr::include_graphics("images/week1/sloane.png")
 ```
 
 ::: {.center-text}
-[**TBD**]{.teal-text}  
-**Email:** [tbd@ucsb.edu](mailto::tbd@ucsb.edu)  
-**Learn more:** [tbd](tbd)   
+[**Sloane Stephenson**]{.teal-text}  
+**Email:** [gstephenson@.ucsb.edu](mailto::gstephenson@.ucsb.edu)  
+<!-- **Learn more:** [tbd](tbd)    -->
 **Student hours:** TBD @ Bren
 :::
 
@@ -226,7 +226,7 @@ Step 2: For exam accommodations (more time, private setting, etc.) students need
 <hr>
 
 ::: {.center-text .body-text-m}
-**<https://samanthacsik.github.io/EDS-240-data-viz>**
+**<https://eds-240-data-viz.github.io/>**
 :::
 
 ```{r}
@@ -299,7 +299,7 @@ Please be sure to carefully complete all required prep (e.g. installing packages
 #| echo: false
 #| fig-align: "center"
 #| out-width: "100%"
-knitr::include_graphics("images/week1/pre-class-prep.png")
+knitr::include_graphics("images/week1/pre-lecture-prep.png")
 ```
 
 ::: {.center-text}
