--- a/course-materials/week2.qmd
+++ b/course-materials/week2.qmd
@@ -128,7 +128,7 @@ Install the [ColorPick Eyedropper](https://chrome.google.com/webstore/detail/col
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Discussion Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
 |-------------------|-------------------|--------------|
-| [D2 slides: USDM](discussion/week2/week2-USDM-slides.qmd) | [D2 exercise: recreate USDM viz](discussion/week2/week2-exercise.qmd) | [D2 solution](discussion/week2/week2-solution.qmd) |
+| [D2 slides: USDM](discussion/week2/week2-USDM-slides.qmd){target="_blank"} | [D2 exercise: recreate USDM viz](discussion/week2/week2-exercise.qmd) | [D2 solution](discussion/week2/week2-solution.qmd) |
 : {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
