--- a/course-materials/week3.qmd
+++ b/course-materials/week3.qmd
@@ -14,7 +14,7 @@ knitr::include_graphics(here::here("images", "alt-text.png"))
 ```
 
 ::: {.center-text .gray-text}
-Image from [Amy Cesal](https://www.amycesal.com/)'s article, [Writing Alt Text for Data Visualization](https://medium.com/nightingale/writing-alt-text-for-data-visualization-2a218ef43f81), published in [Nightingale](https://medium.com/nightingale)
+Image from [Amy Cesal](https://www.amycesal.com/){target="_blank"}'s article, [Writing Alt Text for Data Visualization](https://medium.com/nightingale/writing-alt-text-for-data-visualization-2a218ef43f81){target="_blank"}, published in [Nightingale](https://medium.com/nightingale){target="_blank"}
 :::
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-class Prep {#pre-class-prep}
@@ -27,7 +27,11 @@ Image from [Amy Cesal](https://www.amycesal.com/)'s article, [Writing Alt Text f
 
 ## {{< fa comments title="two speech bubbles" >}} Discussion Materials {#discussion-materials}
 
-*Coming soon!*
+| {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Discussion Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
+|-------------------|-------------------|--------------|
+| [D3 slides: Alt Text](discussion/week3/week3-alt-text-slides.qmd){target="_blank"} | [D3 exercise: writing alt text](discussion/week3/week3-exercise.qmd) | [D3 solution](discussion/week3/week3-solution.qmd) |
+: {.hover .bordered tbl-colwidths="[35,35,30]"} 
+
 
 <!-- **[Alternative text](https://webaim.org/techniques/alttext/),** aka **alt text**, makes our data visualizations accessible to a broader community. Today's section will focus crafting effective alt text, as well as how to include it when rendering visualizations in reproducible reports, websites, etc. using publishing tools like Quarto. -->
 
